--- a/Lab1/Lab1.vcxproj
+++ b/Lab1/Lab1.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Lab1.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="students.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
